Added basic layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Kamikaze's Corner</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+    <div class="header">
+        <div id="headerImg">
+            <img src="img/Kamikaze_Kai_Full.png">
+        </div>
+        <h1>Kamikaze's Corner</h1>
+    </div>
+    <div class="navbar">
+        <a class="active" href="index.html">Home</a>
+        <a href="">Compare</a>
+        <a href="about.html">About</a>
+    </div>
+
+    <p>Nothing here...</p>
+
+    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    
+
+    <div class="footer">
+        <p>Maintained by Mintea. For discord bot <a id="githubLink" target="_blank" href="https://github.com/nath1100/Kamikaze-Bot">Kamikaze-bot</a></p>
+    </div>
+
+</body>
+</html>
