--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <div class="header">
         <div id="headerImg">
-            <img src="img/Kamikaze_Kai_Full.png">
+            <img src="img/header_illust.png">
         </div>
-        <h1>Kamikaze's Corner</h1>
+        <h1>Mintea's Corner</h1>
     </div>
     <div class="navbar">
         <a class="active" href="index.html">Home</a>
@@ -19,16 +19,17 @@
         <a href="about.html">About</a>
     </div>
 
-    <p>Nothing here...</p>
-
-    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    <div class="content-body">
+        <p>Nothing here...</p>
     
+        <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p style="font-size:48px">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>    
+    </div>
 
     <div class="footer">
-        <p>Maintained by Mintea. For discord bot <a id="githubLink" target="_blank" href="https://github.com/nath1100/Kamikaze-Bot">Kamikaze-bot</a></p>
+        <p>Maintained by Mintea#0541. <a id="githubLink" target="_blank" href="https://github.com/nath1100/nath1100.github.io">Source</a> at Github.</p>
     </div>
 
 </body>
