--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
 
     <div class="header">
         <div id="headerImg">
-            <img src="img/Kamikaze_Kai_Full.png">
+            <img src="img/header_illust.png">
         </div>
-        <h1>Kamikaze's Corner</h1>
+        <h1>Mintea's Corner</h1>
     </div>
     <div class="navbar">
         <a href="index.html">Home</a>
@@ -19,11 +19,13 @@
         <a class="active" href="about.html">About</a>
     </div>
 
-    <h1>About</h1>
-    <p>This website contains utility tools separate from Kamikaze-bot's commands.</p>
+    <div class="content-body">
+        <h1>About</h1>
+        <p>Hobby related things belong here...</p>
+    </div>
     
     <div class="footer">
-        <p>Maintained by Mintea. For discord bot <a id="githubLink" target="_blank" href="https://github.com/nath1100/Kamikaze-Bot">Kamikaze-bot</a></p>
+        <p>Maintained by Mintea#0541. <a id="githubLink" target="_blank" href="https://github.com/nath1100/nath1100.github.io">Source</a> at Github.</p>
     </div>
 
 </body>
